fixed the side spacing

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -43,6 +43,8 @@ body {
 }
 .content {
   width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .menu-item {
   background-color: #ccc;
